--- a/package.json
+++ b/package.json
@@ -4,14 +4,29 @@
   "description": "![](https://img.shields.io/badge/Microverse-blueviolet)",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "watch": "webpack --watch",
     "start": "webpack serve --open",
-    "build": "webpack"
+    "build": "webpack",
+    "deploy": "gh-pages -d dist"
+  },
+  "babel": {
+    "env": {
+      "test": {
+        "plugins": [
+          "@babel/plugin-transform-modules-commonjs"
+        ]
+      }
+    }
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    }
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Kingjosh007/capstone2-kanban.git"
+    "url": "git+https://github.com/Fikerte-T/capstone2-kanban.git"
   },
   "keywords": [],
   "author": "",
@@ -21,13 +36,17 @@
   },
   "homepage": "https://github.com/Fikerte-T/capstone2-kanban#readme",
   "devDependencies": {
+    "@babel/preset-env": "^7.15.8",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^27.2.4",
     "css-loader": "^6.3.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.24.2",
     "hint": "^6.1.4",
     "html-webpack-plugin": "^5.3.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.2.4",
     "style-loader": "^3.3.0",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
@@ -38,6 +57,6 @@
     "webpack-dev-server": "^4.3.0"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "gh-pages": "^3.2.3"
   }
 }
