Add webhint script to package.json as suggested by the documentation

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "webpack --watch",
     "start": "webpack serve --open",
     "build": "webpack",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "webhint": "hint http://localhost:8080"
   },
   "babel": {
     "env": {
